--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint quiz-generator-front",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "fmt": "biome format --write src/",
+    "lint": "biome lint src/"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -15,6 +16,7 @@
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.2",
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
